--- a/style.css
+++ b/style.css
@@ -1,21 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 :root {
   --clr-primary: hsl(220, 98%, 61%);
-  --clr-bg: linear-gradient(to left, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
-  /* light */
-  --clr-light-1: hsl(0, 0%, 98%);
-  --clr-light-2: hsl(236, 33%, 92%);
-  --clr-light-3: hsl(233, 11%, 84%);
-  --clr-light-4: hsl(236, 9%, 61%);
-  --clr-light-5: hsl(235, 19%, 35%);
-  /* Dark */
-  --clr-dark-1: hsl(235, 21%, 11%);
-  --clr-dark-2: hsl(235, 24%, 19%);
-  --clr-dark-3: hsl(234, 39%, 85%);
-  --clr-dark-4: hsl(236, 33%, 92%);
-  --clr-dark-5: hsl(234, 11%, 52%);
-  --clr-dark-6: hsl(233, 14%, 35%);
-  --clr-dark-7: hsl(237, 14%, 26%);
+  --bg-check: linear-gradient(to left, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
 .light {
   --bg-url: url('./images/bg-mobile-light.jpg');
@@ -23,17 +9,23 @@
   --bg-primary: hsl(236, 33%, 92%);
   --bg-input: hsl(0, 0%, 98%);
   --clr-input: hsl(236, 9%, 61%);
-  --bg-check: hsl(233, 11%, 84%);
-  --bg-delete: hsl(235, 19%, 35%);
+  --clr-todo: hsl(235, 19%, 35%);
+  --clr-striked: hsl(236, 33%, 92%);
+  --clr-hover: hsl(235, 19%, 35%);
+  --clr-fill: hsl(235, 19%, 35%);
+  --border-check: hsl(233, 11%, 84%);
 }
 .dark {
   --bg-url: url('./images/bg-mobile-dark.jpg');
   --bg-theme: url('./images/icon-sun.svg');
   --bg-primary: hsl(235, 21%, 11%);
   --bg-input: hsl(235, 24%, 19%);
-  --clr-input: hsl(234, 39%, 85%);
-  --bg-check: hsl(234, 39%, 85%);
-  --bg-delete: hsl(233, 14%, 35%);
+  --clr-input: hsl(234, 11%, 52%);
+  --clr-todo: hsl(234, 39%, 85%);
+  --clr-striked: hsl(234, 11%, 52%);
+  --clr-hover: hsl(234, 39%, 85%);
+  --clr-fill: hsl(234, 39%, 85%);
+  --border-check: hsl(234, 39%, 85%);
 }
 *,
 *::before,
@@ -43,20 +35,42 @@
   box-sizing: border-box;
 }
 body {
+  position: relative;
   font: 18px 'Josefin Sans', sans-serif;
   background: var(--bg-url) no-repeat center top, var(--bg-primary);
   background-size: contain;
-  height: 100vh;
+  min-height: calc(100 * var(--vh));
+  padding-top: 4.5rem;
+  padding-bottom: 2rem;
+  scrollbar-width: thin;
+  scrollbar-color: var(--clr-light-5) var(--clr-light-4);
+}
+body::-webkit-scrollbar {
+  width: 0.4rem;
+}
+body::-webkit-scrollbar-track {
+  background: var(--clr-light-4);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--clr-light-5);
 }
 .container {
-  position: relative;
-  top: 8%;
-  width: 100%;
   margin: 0 auto;
   padding: 0 1.5rem;
-  height: 92%;
 }
-header {
+.flex {
+  display: flex;
+  align-items: center;
+}
+.w-100 {
+  width: 100%;
+}
+.hide {
+  display: none;
+}
+header,
+form,
+li.todo-li {
   position: relative;
 }
 header h1 {
@@ -74,34 +88,20 @@ i#theme {
   cursor: pointer;
 }
 form {
-  position: relative;
   margin-top: 1.5rem;
 }
 form input#todo {
   border-radius: 0.2rem;
 }
 ul.todo-ul {
-  border-radius: 0.2rem;
-  max-height: 70%;
-  height: auto;
-  width: 100%;
+  border-radius: 0.2rem 0.2rem 0 0;
   list-style: none;
   margin-top: 1.5rem;
-  overflow-y: auto;
-  scrollbar-width: thin;
-  scrollbar-color: var(--clr-light-5) var(--clr-light-4);
 }
-ul.todo-ul::-webkit-scrollbar {
-  width: 0.4rem;
-}
-ul.todo-ul::-webkit-scrollbar-track {
-  background: var(--clr-light-4);
-}
-ul.todo-ul::-webkit-scrollbar-thumb {
-  background-color: var(--clr-light-5);
-}
+
 input#todo,
-li.todo-li {
+li.todo-li,
+div.todo-info {
   width: 100%;
   background: var(--bg-input);
   outline: none;
@@ -110,22 +110,27 @@ li.todo-li {
   padding-left: 3rem;
   font-family: inherit;
 }
+input#todo::placeholder {
+  color: var(--clr-input);
+}
 li.todo-li {
-  position: relative;
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-top-color: var(--clr-input);
   cursor: grabbing;
+  border-bottom: 1px solid var(--border-check);
+}
+li.todo-li:first-child {
+  border-top-left-radius: 0.2rem;
+  border-top-right-radius: 0.2rem;
 }
 li.todo-li p {
-  color: var(--clr-input);
+  color: var(--clr-todo);
   padding: 1rem 0;
 }
 li.todo-li.checked p {
   text-decoration: line-through;
+  color: var(--clr-striked);
 }
 li.todo-li.checked button.check {
-  background: var(--clr-bg);
+  background: var(--bg-check);
 }
 li.todo-li button.check svg {
   visibility: hidden;
@@ -150,11 +155,11 @@ button.delete {
 
 form::before,
 button.check {
-  width: 1rem;
-  height: 1rem;
+  width: 1.2rem;
+  height: 1.2rem;
   top: 1rem;
   left: 1rem;
-  border: 1px solid var(--bg-check);
+  border: 1px solid var(--border-check);
   border-radius: 50%;
 }
 button.delete {
@@ -168,31 +173,78 @@ button.delete {
   background: transparent;
   outline: none;
 }
-
+button.delete:hover svg path {
+  fill: var(--clr-fill);
+}
 button.check,
-button.delete {
+button.delete,
+.clear,
+li.todo-li::before,
+li.todo-li::after,
+.todo-classify p {
   cursor: pointer;
 }
 button.check svg,
 button.delete svg {
   pointer-events: none;
 }
-li.todo-li::before,
-li.todo-li::after {
-  cursor: pointer;
+div.todo-info {
+  position: relative;
+  justify-content: space-between;
+  color: var(--clr-input);
+  font-size: 0.875rem;
+  min-height: 2.5rem;
+  padding: 0 2rem;
+  border-radius: 0 0 0.2rem 0.2rem;
 }
-
-li.todo-li:first-child {
-  border-top: none;
+.todo-classify {
+  justify-content: center;
+  background: var(--bg-input);
+}
+.todo-classify p {
+  font-weight: 700;
+}
+.todo-classify p:not(.active):hover,
+.clear p:hover {
+  color: var(--clr-hover);
+}
+.todo-classify p.active {
+  color: var(--clr-primary);
+}
+.todo-classify p + p {
+  margin-left: 1em;
+}
+p.draganddrop {
+  margin: 2rem 0;
+  text-align: center;
+  font-size: 0.85em;
+  color: var(--clr-input);
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: var(--clr-input);
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
-@media (min-width: 568px) {
+@media (max-width: 568px) {
+  .todo-classify {
+    position: absolute;
+    left: 0;
+    top: 110%;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.2rem;
+  }
+}
+@media (min-width: 569px) {
   .light {
     --bg-url: url('./images/bg-desktop-light.jpg');
   }
